Incorrect variable name for middle score

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -39,8 +39,8 @@
     "    for i in range(val_divi):\n",
     "        increase_index = i + 1\n",
     "        optimal_number_index = i + increase_index\n",
-    "        highest_middle += sorted_piles[optimal_number_index]\n",
-    "    return highest_middle"
+    "        highest_middle_score += sorted_piles[optimal_number_index]\n",
+    "    return highest_middle_score"
    ]
   },
   {
