--- a/solution.ipynb
+++ b/solution.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "\n",
     "As you can see: Your optimal combination will be made out of the middle number between the individual piles of three's.\n",
     "\n",
-    "highest_middle = 8 + 6 + 4 = 18.  \n",
+    "highest_middle_score = 8 + 6 + 4 = 18.  \n",
     "\n",
     "with corresponding indexes = (1, 3, 5).  \n",
     "\n",
